--- a/frontend/src/pages/login/loginForm.css
+++ b/frontend/src/pages/login/loginForm.css
@@ -1,7 +1,7 @@
 body {
     background-image: linear-gradient(rgba(109, 109, 109, 0.075), rgba(109, 109, 109, 0.075)),
     url("https://c4.wallpaperflare.com/wallpaper/909/934/447/red-blue-soft-pastel-wallpaper-preview.jpg");
-    height: 100%;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
