--- a/frontend/src/pages/review/review.css
+++ b/frontend/src/pages/review/review.css
@@ -1,4 +1,4 @@
-body {
+bodyReview {
     background-image: linear-gradient(rgba(109, 109, 109, 0.075), rgba(109, 109, 109, 0.075)),
     url("https://c4.wallpaperflare.com/wallpaper/909/934/447/red-blue-soft-pastel-wallpaper-preview.jpg");
     height: 100vh;
@@ -9,5 +9,5 @@ body {
     color: rgb(0, 0, 0);    
     justify-content: center;
     display: flex;
-    align-items: center;
+
 }
