--- a/frontend/src/pages/review/review.css
+++ b/frontend/src/pages/review/review.css
@@ -1,4 +1,4 @@
-bodyReview {
+/* bodyReview {
     background-image: linear-gradient(rgba(109, 109, 109, 0.075), rgba(109, 109, 109, 0.075)),
     url("https://c4.wallpaperflare.com/wallpaper/909/934/447/red-blue-soft-pastel-wallpaper-preview.jpg");
     height: 100vh;
@@ -10,4 +10,4 @@ bodyReview {
     justify-content: center;
     display: flex;
 
-}
+} */
